--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,18 +2,7 @@
 name: check
 
 on:
-  push:
-    branches:
-      - main
-      - 'v4.*.x'
-    paths-ignore:
-      - 'docs/**'
-  pull_request:
-    branches:
-      - main
-      - 'v4.*.x'
-    paths-ignore:
-      - 'docs/**'
+  workflow_dispatch
 
 jobs:
   lint:
