--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -57,6 +57,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Clear cache
         run: go clean -cache -modcache -i -r
+      - name: Uninstall existing Go versions
+        run: sudo rm -rf /usr/local/go
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
