--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Clean Go module cache
+        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
@@ -27,6 +33,12 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Clean Go module cache
+        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
