--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -69,7 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: 1.23
+        go-version: ['1.23']
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
