--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,12 +13,6 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Clean Go module cache
-        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
@@ -33,12 +27,6 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Clean Go module cache
-        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
@@ -53,12 +41,6 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Clean Go module cache
-        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
@@ -69,16 +51,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.23']
+        go-version:  ['1.21', '1.22', '1.23']
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Clean Go module cache
-        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
@@ -93,12 +69,6 @@ jobs:
     steps:
       - name: Checkout Warewulf
         uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Clean Go module cache
-        run: go clean -modcache
       - uses: ./.github/actions/prepare
         with:
           go-version: ${{ matrix.go-version }}
